--- a/Launcher/Launcher/packages.config
+++ b/Launcher/Launcher/packages.config
@@ -5,6 +5,10 @@
   <package id="Caliburn.Micro.Core" version="2.0.1" targetFramework="net45" />
   <package id="Caliburn.Micro.Logging" version="2.0.3.0" targetFramework="net45" />
   <package id="Caliburn.Micro.Start" version="2.0.1" targetFramework="net45" />
+  <package id="cef.redist.x64" version="3.2171.1979" targetFramework="net45" />
+  <package id="cef.redist.x86" version="3.2171.1979" targetFramework="net45" />
+  <package id="CefSharp.Common" version="39.0.0-pre03" targetFramework="net45" />
+  <package id="CefSharp.WinForms" version="39.0.0-pre03" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="Extended.Wpf.Toolkit" version="2.4" targetFramework="net45" />
   <package id="MahApps.Metro" version="0.14.0.0" targetFramework="net45" />
