--- a/Launcher/Launcher/App.config
+++ b/Launcher/Launcher/App.config
@@ -39,11 +39,15 @@
     </providers>
   </entityFramework>
   <runtime>
+    
+    <useLegacyJit enabled="1"/>
+    
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Caliburn.Micro" publicKeyToken="8e5891231f2ed21f" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.0.1.0" newVersion="2.0.1.0" />
       </dependentAssembly>
     </assemblyBinding>
+  
   </runtime>
 </configuration>
