--- a/Launcher/Launcher/packages.config
+++ b/Launcher/Launcher/packages.config
@@ -15,6 +15,9 @@
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
   <package id="Microsoft.Composition" version="1.0.30" targetFramework="net45" />
+  <package id="NLog" version="3.2.0.0" targetFramework="net45" />
+  <package id="NLog.Config" version="3.2.0.0" targetFramework="net45" />
+  <package id="NLog.Schema" version="3.2.0.0" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.94.1" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.94.0" targetFramework="net45" />
   <package id="System.Data.SQLite.EF6" version="1.0.94.0" targetFramework="net45" />
