--- a/Launcher/Launcher.Core/Launcher.Core.csproj
+++ b/Launcher/Launcher.Core/Launcher.Core.csproj
@@ -77,10 +77,12 @@
     <Reference Include="ReachFramework" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SQLite">
       <HintPath>..\packages\System.Data.SQLite.Core.1.0.94.0\lib\net45\System.Data.SQLite.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\MahApps.Metro.1.0.1-ALPHA047\lib\net45\System.Windows.Interactivity.dll</HintPath>
@@ -102,19 +104,29 @@
     <Compile Include="Components\Document\OpenDocument.cs" />
     <Compile Include="Db\DataBase.cs" />
     <Compile Include="HelperClass\DocFile.cs" />
+    <Compile Include="HelperClass\FilePath.cs" />
     <Compile Include="HelperClass\KeyboardProperty.cs" />
     <Compile Include="IModule.cs" />
     <Compile Include="IModuleName.cs" />
     <Compile Include="ISearch.cs" />
     <Compile Include="IUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="Security.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Db\db.db" />
     <None Include="packages.config" />
-    <None Include="Resources\Entypo.ttf" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Lib\bcprov-jdk15-1.44.dll" />
@@ -127,15 +139,9 @@
     <Content Include="Lib\IKVM.OpenJDK.Util.dll" />
     <Content Include="Lib\IKVM.Runtime.dll" />
     <Content Include="Lib\pdfbox-1.8.7.dll" />
-    <Content Include="Resources\Entypo-license.txt" />
-    <Resource Include="Resources\WindowsIcons-license.txt" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="Components\Document\DocumentView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Resources\Icons.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
